[project]
name = "coag_cashflows"
authors = [
    { name = "Camden Open Air Gallery", email = "tech@camdenopenairgallery.com" },
]
description = "Cashflows IPP payment integration for ERPNext POS Next"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "requests>=2.31.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
